--- a/gradient_descent/梯度下降.md
+++ b/gradient_descent/梯度下降.md
@@ -198,7 +198,7 @@ $$
 
 ---
 
-下面用**线性回归**的例子来具体描述梯度下降。假设我们的样本是$(x_1^{(0)},x_2^{(0)},..x_n^{(0)}),(x_1^{(1)},x_2^{(1)},..x_n^{(1)}),...,(x_1^{(m)},x_2^{(m)},..x_n^{(m)})$,
+下面用**线性回归**的例子来具体描述梯度下降。假设我们的样本是$(x_1^{(0)},x_2^{(0)},..x_n^{(0)}),(x_1^{(1)},x_2^{(1)},..x_n^{(1)}),...,(x_1^{(m)},x_2^{(m)},..x_n^{(m)})​$,
 
 损失函数如前面先决条件所述：
 $$
@@ -307,9 +307,11 @@ $$
 
 - 局部极小值
   - 梯度下降可能在局部最小的点收敛。
+
     ![image](https://images.cnblogs.com/cnblogs_com/zingp/1384487/o_min.png)
 - 鞍点
   - 鞍点是指梯度为0，Hessian矩阵既不是正定也不是负定，即不定的点。如函数x^2^−y^2^在(0,0)点梯度为0，但显然不是局部最小的点，也不是全局最小的点。
+
     ![image](https://images.cnblogs.com/cnblogs_com/zingp/1384487/o_%E9%9E%8D%E7%82%B9.jpg)
 
 
